# vestapol

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  demo.py  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
tests/destinations/: test_gcp_destination.py
tests/web_resources/: test_base_resource.py  test_csv_resource.py  test_json_resource.py
vestapol/: __init__.py  external_tables.py
vestapol/api/: api.py
vestapol/destinations/: __init__.py  base_destination.py  gcp_destination.py  local_destination.py
vestapol/tests/: test_base_resource.py  test_csv_resource.py  test_gcp_destination.py  test_json_resource.py
vestapol/typing/: resources.py
vestapol/web_resources/: __init__.py  base_resource.py  csv_resource.py  github_resource.py  json_resource.py
vestapol/writers/: json_writer.py  text_writer.py
